--- a/main.css
+++ b/main.css
@@ -7,40 +7,35 @@
 }
 
 nav {
-    position: fixed;
-    top: 0; 
-    left: 0;
-    height: 100%;
-    width: 13%;
     background-color: #030842;
-    text-align: center;
     color: rgb(245, 241, 242);
+    height: 80px;
 }
 
 .nav-pic {
-    margin-top: 50px;
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
+}
+
+.medal-pic {
+    float: left;
+    width: 30px;
+    height: 30px;
+    padding: 2px;
 }
 
 .nav-item {
-    margin-top: 10px;
+    float: left;
+    list-style: none;
+    margin: 5px 10px;
     padding: 15px;
-    border-left: 5px solid #fd0236;
+    width: 5em;
+    border-top: 5px solid #fd0236;
 }
 
 .nav-item:hover {
     background-color: #070f69;
-    transform: translateX(10px);
-}
-
-.nav-item:last-child {
-    margin-bottom: 25px;
-}
-
-.small-font {
-    font-size: 12px;
-    margin-bottom: 25px;
+    transform: translateY(10px);
 }
 
 .li-style {
@@ -55,8 +50,6 @@ table tr:hover {
 }
 
 body {
-    position: absolute;
-    margin-left: 13%;
     background-color: #d8d1d8;
     color: #4F4A41;
 }
@@ -81,7 +74,7 @@ header {
 }
 
 #begin {
-    padding: 10px;
+    padding: 5px;
     background-color: #fd0236;
     border-radius: 5px;
     color: rgb(245, 241, 242);
@@ -100,7 +93,7 @@ header {
 }
 
 .main-heading {
-    margin: 50px 0;
+    margin: 50px 20px;
     text-align: left;
     border-bottom: 2px solid #444;
 }
@@ -112,7 +105,7 @@ header {
 }
 
 .center-content {
-    margin-top: 15%;
+    margin-top: 10%;
     font-size: 2em;
 }
 
@@ -122,6 +115,12 @@ header {
     display: block;
     margin: 0 auto;
     transform: scale(1.6);
+}
+
+.card-img-top {
+    width: 100px;
+    height: 300px;
+    padding: 10px;
 }
 
 .box {
@@ -136,24 +135,62 @@ header {
     margin: 15px;
 }
 
-.container {
-    margin: 5%;
-}
-
 .clear {
     clear: both;
 }
 
 table {
     width: 100%;
-    font-size: 20px;
-    border-spacing: 5px;
-}
+} 
 
-thead tr:first-child {
-    font-size: 25px;
-}
+@media (max-width: 576px) { 
+    nav {
+        height: 50%;
+    }
 
-tbody tr:nth-child(odd) {
-    background-color: #bbb;
+    .nav-pic {
+        margin: 5px auto;
+    }
+
+    .nav-item {
+        width: 100%;
+        height: 10px;
+        display: inline-block;
+    }
+
+    header {
+        height: 300px;
+        background-size: cover;
+        padding-top: 10px;
+    }
+    
+    .header-content {
+        background-color: rgba(68, 68, 68, 0.329);
+        padding-left: 10px;
+        width: 100%;
+        margin-top: 15%;
+    }
+    
+    .welcome-greeting {
+        font-size: 30px;
+    }
+
+    .center-content {
+        margin: 0;
+    }
+
+    .tutor,
+    .display-3-col {
+        display: inline-block;
+        width: 100%;
+        margin: 10px auto;
+    }
+
+    .students-pic { /* remove this pic */
+        margin-top: 60px;
+    }
+
+    /* remove row for courses */
+    
+    /* remove row for about */
 }
