--- a/main.css
+++ b/main.css
@@ -9,7 +9,6 @@
 nav {
     background-color: #030842;
     color: rgb(245, 241, 242);
-    height: 80px;
 }
 
 .nav-pic {
@@ -19,17 +18,15 @@ nav {
 
 .medal-pic {
     float: left;
-    width: 30px;
-    height: 30px;
+    width: 10%;
+    height: 10%;
     padding: 2px;
 }
 
 .nav-item {
     float: left;
     list-style: none;
-    margin: 5px 10px;
-    padding: 15px;
-    width: 5em;
+    padding: 0 20px;
     border-top: 5px solid #fd0236;
 }
 
@@ -49,18 +46,18 @@ table tr:hover {
     color: #fd0236;
 }
 
-body {
-    background-color: #d8d1d8;
+body,
+.card {
+    background: radial-gradient(#eee, #fff);
     color: #4F4A41;
 }
 
 header {
-    height: 500px;
+    height: 600px;
     color: rgb(245, 241, 242);
     background-image: url("img/coding.jpeg");
     background-size: cover;
     padding-top: 150px;
-    line-height: 2em;
 }
 
 .header-content {
@@ -70,14 +67,8 @@ header {
 }
 
 .welcome-greeting {
-    font-size: 50px;
-}
-
-#begin {
-    padding: 5px;
-    background-color: #fd0236;
-    border-radius: 5px;
-    color: rgb(245, 241, 242);
+    font-size: 60px;
+    margin: 0;
 }
 
 .tutor-pic {
@@ -89,11 +80,11 @@ header {
 }
 
 .tutor-pic:hover {
-    transform: rotate(10deg);
+    transform: rotate(15deg);
 }
 
 .main-heading {
-    margin: 50px 20px;
+    margin: 50px auto;
     text-align: left;
     border-bottom: 2px solid #444;
 }
@@ -101,7 +92,12 @@ header {
 .tutor {
     float: left;
     width: 50%;
-    margin-top: 5%;
+    padding: 20px;
+}
+
+.back-style {
+    background: #c59e8b5d;
+    border-radius: 20px 20px 0 20px;
 }
 
 .center-content {
@@ -123,11 +119,6 @@ header {
     padding: 10px;
 }
 
-.box {
-    border: 2px solid #444;
-    background-color: rgba(17, 45, 50, 0.082);
-} 
-
 .display-3-col {
     float: left;
     padding: 20px;
@@ -143,19 +134,52 @@ table {
     width: 100%;
 } 
 
-@media (max-width: 576px) { 
+#sign-in {
+    margin-left: 200px;
+}
+
+.signup-form {
+    position: relative;
+    background-color: #c59e8b5d;
+    margin-top: 120px;
+    padding-top: 30px;
+    border: 2px solid #444;
+}
+
+#genderPicture {
+    position: absolute;
+    border: 3px solid #444;
+    border-radius: 50%;
+    left: calc(50% - 100px);
+    bottom: calc(100% - 100px);
+    background-color: #c59e8b;
+}
+
+@media (max-width: 1199.98px) {
+    /* .card-img-top {
+        height: 40%;
+        width: 30%;
+    }  */
+}
+
+@media (max-width: 767.98px) { 
     nav {
         height: 50%;
     }
 
     .nav-pic {
-        margin: 5px auto;
+        clear: both;
     }
 
     .nav-item {
-        width: 100%;
-        height: 10px;
-        display: inline-block;
+        display: block;
+        margin-top: calc(50% - 50%px);
+        font-size: 14px;
+        padding: 0 5px;
+    }
+    
+    .nav-item:hover {
+        transform: translateX(5px);
     }
 
     header {
@@ -183,14 +207,14 @@ table {
     .display-3-col {
         display: inline-block;
         width: 100%;
-        margin: 10px auto;
     }
 
     .students-pic { /* remove this pic */
-        margin-top: 60px;
+        display: none;
     }
 
-    /* remove row for courses */
-    
-    /* remove row for about */
+    .main-heading,
+    .col-md {
+        margin: 20px 50px;
+    }
 }
