--- a/main.css
+++ b/main.css
@@ -18,25 +18,24 @@ nav {
 
 .medal-pic {
     float: left;
-    width: 10%;
-    height: 10%;
+    width: 12%;
+    height: 12%;
     padding: 2px;
 }
 
 .nav-item {
     float: left;
     list-style: none;
-    padding: 0 20px;
-    border-top: 5px solid #fd0236;
+    padding: 0 10px;
+    border-bottom: 2px solid #fd0236;
 }
 
 .nav-item:hover {
     background-color: #070f69;
-    transform: translateY(10px);
+    transform: translateY(5px);
 }
 
 .li-style {
-    text-decoration: none;
     color: rgb(245, 241, 242);
 }
 
@@ -89,41 +88,26 @@ header {
     border-bottom: 2px solid #444;
 }
 
-.tutor {
-    float: left;
-    width: 50%;
-    padding: 20px;
-}
-
 .back-style {
     background: #c59e8b5d;
     border-radius: 20px 20px 0 20px;
-}
-
-.center-content {
-    margin-top: 10%;
-    font-size: 2em;
 }
 
 .students-pic {
     width: 170px;
     height: 200px;
     display: block;
-    margin: 0 auto;
-    transform: scale(1.6);
+    margin: 2% auto;
+}
+
+.enrollBtn {
+    float: right;
+    margin: 20px;
+    clear: both;
 }
 
 .card-img-top {
-    width: 100px;
-    height: 300px;
     padding: 10px;
-}
-
-.display-3-col {
-    float: left;
-    padding: 20px;
-    width: calc(33.3333% - 30px);
-    margin: 15px;
 }
 
 .clear {
@@ -135,14 +119,15 @@ table {
 } 
 
 #sign-in {
-    margin-left: 200px;
+    width: 100%;
 }
 
 .signup-form {
+    width: 60%;
     position: relative;
     background-color: #c59e8b5d;
     margin-top: 120px;
-    padding-top: 30px;
+    padding-top: 70px;
     border: 2px solid #444;
 }
 
@@ -155,31 +140,21 @@ table {
     background-color: #c59e8b;
 }
 
-@media (max-width: 1199.98px) {
-    /* .card-img-top {
-        height: 40%;
-        width: 30%;
-    }  */
-}
-
 @media (max-width: 767.98px) { 
+
     nav {
         height: 50%;
-    }
-
-    .nav-pic {
-        clear: both;
     }
 
     .nav-item {
         display: block;
         margin-top: calc(50% - 50%px);
-        font-size: 14px;
+        font-size: 16px;
         padding: 0 5px;
     }
     
     .nav-item:hover {
-        transform: translateX(5px);
+        transform: translateY(5px);
     }
 
     header {
@@ -199,22 +174,20 @@ table {
         font-size: 30px;
     }
 
-    .center-content {
-        margin: 0;
+}
+
+@media (max-width: 450px) {
+
+    html {
+        font-size: .9rem;
+    }
+    .nav-pic {
+        margin: 0 auto;
+        clear: both;
     }
 
-    .tutor,
-    .display-3-col {
-        display: inline-block;
+    .nav-item {
         width: 100%;
-    }
-
-    .students-pic { /* remove this pic */
-        display: none;
-    }
-
-    .main-heading,
-    .col-md {
-        margin: 20px 50px;
+        font-size: 14px;
     }
 }
