--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <app-navigation></app-navigation>
-<form class="signup-form mx-auto ">
+<form (ngSubmit)="onSignin(f)" #f="ngForm" class="signup-form mx-auto ">
   <div id="genderPicture">
       <img id="maleOrFemale" class="tutor-pic" src="{{ imagePath }}" alt="A picture based from gender">
   </div>
@@ -7,13 +7,13 @@
   <div class="container form-group row">
       <label for="inputEmail" class="col-form-label col-sm-2">Email</label>
       <div class="col-sm-10">
-          <input type="email" class="form-control" id="inputEmail" placeholder="Enter Email" required>
+          <input ngModel type="email" class="form-control" id="inputEmail" placeholder="Enter Email" required>
       </div>
   </div>
   <div class="container form-group row">
       <label for="inputPassword" class="col-form-label col-sm-2">Password</label>
       <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword" placeholder="Password" required min-length="8">
+          <input ngModel type="password" class="form-control" id="inputPassword" placeholder="Password" required min-length="8">
       </div>
   </div>
   <div class="row container form-group" id="genderForm">
@@ -36,5 +36,3 @@
 <div class="container text-center main-heading">
     <a routerLink="">Go back to home</a>
 </div>
-
-<app-footer></app-footer>
