--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -1,3 +1,4 @@
+<app-navigation></app-navigation>
 <div class="container">
     <h1 id="courses" class="main-heading highlight">Courses</h1>
     <div class="container row mx-auto">
