--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,33 @@
 <app-navigation></app-navigation>
-<app-header></app-header>
-<app-tutor></app-tutor>
+
+<header>
+    <div class="header-content container">
+        <h1 class="welcome-greeting align-middle">Welcome to <span class="highlight">X</span>-Course!</h1>
+        <p class="align-middle"><strong>Lessons worth learning made fun and easy.</strong></p>
+        <a routerLink="/registration" (click)="toggleNav()" id="begin" class="btn btn-danger btn-lg" role="submit" aria-pressed="true">Join Now!</a>
+    </div>
+</header>
+    
+
 <app-info></app-info>
-<app-course></app-course>
 <app-schedule></app-schedule>
-<app-footer></app-footer>
+
+<div class="container main-heading row mx-auto">
+    <div class="container border col-md-6">
+        <h3 class="highlight">Creator</h3>
+        <p>This site is created by <em>Johhny J. King</em>. A 
+            graduate of Computer Science from the University of
+            Canada, U.S.A</p>
+    </div>
+
+    <div class="container border col-md-6">
+        <h3 class="highlight">About</h3>
+        <p>This site is about providing people a fun and 
+            creative way of taking web courses.
+        </p>
+    </div>
+</div>
+
+<footer>
+    <p class="highlight contain text-center">&copy; 2018 Randolph Dy</p>
+</footer>
