--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,12 +1,39 @@
 
-<nav id="navbarScroll" class="navbar fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <img class="navbar-brand nav-pic img-fluid" src="../../assets/img/cancel.png" alt="Navigation Picture"/>
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav list">
+      <li class="nav-item">
+        <a class="li-style nav-link" routerLink=""><strong>Home</strong></a>
+      </li>
+      <li class="nav-item">
+        <a class="li-style nav-link" routerLink="/courses"><strong>Courses</strong></a>
+      </li>
+      <li class="nav-item">
+        <a class="li-style nav-link" routerLink="/tutors"><strong>Tutors</strong></a>
+      </li>
+      <li class="nav-item">
+        <a class="li-style nav-link" routerLink="/registration"><strong>Register</strong></a>
+      </li>
+      <li class="nav-item">
+        <a class="li-style nav-link" routerLink="/login"><strong>Login</strong></a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<!-- <nav id="navbarScroll" class="navbar fixed-top">
   <img class="nav-pic" src="../../assets/img/cancel.png" alt="Navigation Picture"/>
-  <ul class="list" *ngIf="mainPage">
-      <li class="nav-item" *ngFor="let item of mainHeaders">
-        <a class="li-style nav-link" href="#{{ item | lowercase }}"><strong>{{ item }}</strong></a>
+  <div class="collapse navbar-collapse"></div>
+  <ul class="list">
+      <li class="nav-item">
+        <a class="li-style nav-link" routerLink=""><strong>Home</strong></a>
+      </li>
+      <li class="nav-item">
+        <a class="li-style nav-link" routerLink="register"><strong>Register</strong></a>
+      </li>
+      <li class="nav-item">
+        <a class="li-style nav-link" routerLink="login"><strong>Login</strong></a>
       </li>
   </ul>
-  <ul class="list" *ngIf="regPage">
-      <li *ngIf="regPage" class="nav-item"><a class="li-style nav-link" href="#"><strong>{{ regHeader }}</strong></a></li>
-  </ul>
-</nav>
+</nav> -->
