--- a/src/app/tutor/tutor.component.html
+++ b/src/app/tutor/tutor.component.html
@@ -1,7 +1,8 @@
+<app-navigation></app-navigation>
 <div class="container">
     <h1 id="tutors" class="main-heading highlight">Tutors</h1>
     <div class="container row mx-auto">
-        <div class="tutor col-md-6" *ngFor="let item of tutors; let i = index">
+        <div class="tutor col-md-6" *ngFor="let item of tutorObj; let i = index">
             <img class="tutor-pic" src="{{ item.imagePath }}" alt="Picture of Juan">
             <h4 class="highlight back-style">{{ item.tutorName }}</h4>
             <button type="button" class="btn btnDanger enrollBtn" (click)="openWindowCustomClass(content)" (click)="getVal('btn' + (i + 1))">Enroll!</button>
