a much better navbar

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,24 +1,26 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <img class="navbar-brand nav-pic img-fluid" src="../../assets/img/cancel.png" alt="Navigation Picture"/>
-  <div class="collapse navbar-collapse">
-    <ul class="navbar-nav list">
-      <li class="nav-item">
-        <a class="li-style nav-link" routerLink=""><strong>Home</strong></a>
-      </li>
-      <li class="nav-item">
-        <a class="li-style nav-link" routerLink="/courses"><strong>Courses</strong></a>
-      </li>
-      <li class="nav-item">
-        <a class="li-style nav-link" routerLink="/tutors"><strong>Tutors</strong></a>
-      </li>
-      <li class="nav-item">
-        <a class="li-style nav-link" routerLink="/registration"><strong>Register</strong></a>
-      </li>
-      <li class="nav-item">
-        <a class="li-style nav-link" routerLink="/login"><strong>Login</strong></a>
-      </li>
-    </ul>
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+  <div class="container">
+    <img class="navbar-brand nav-pic img-fluid" src="../../assets/img/cancel.png" alt="Navigation Picture"/>
+    <!-- <div class="collapse navbar-collapse"> -->
+      <ul class="navbar-nav list">
+        <li class="nav-item">
+          <a class="li-style nav-link" routerLink=""><strong>Home</strong></a>
+        </li>
+        <li class="nav-item">
+          <a class="li-style nav-link" routerLink="/courses" routerLinkActive="active"><strong>Courses</strong></a>
+        </li>
+        <li class="nav-item">
+          <a class="li-style nav-link" routerLink="/tutors" routerLinkActive="active"><strong>Tutors</strong></a>
+        </li>
+        <li class="nav-item">
+          <a class="li-style nav-link" routerLink="/registration" routerLinkActive="active"><strong>Register</strong></a>
+        </li>
+        <li class="nav-item">
+          <a class="li-style nav-link" routerLink="/login" routerLinkActive="active"><strong>Login</strong></a>
+        </li>
+      </ul>
+    <!-- </div> -->
   </div>
 </nav>
 
