--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,15 +5,15 @@
   </div>
   <br/><br/>
   <div class="container form-group row">
-      <label for="inputEmail" class="col-form-label col-sm-2">Email</label>
+      <label for="email" class="col-form-label col-sm-2">Email</label>
       <div class="col-sm-10">
-          <input ngModel type="email" class="form-control" id="inputEmail" placeholder="Enter Email" required>
+          <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Enter Email" ngModel required>
       </div>
   </div>
   <div class="container form-group row">
-      <label for="inputPassword" class="col-form-label col-sm-2">Password</label>
+      <label for="password" class="col-form-label col-sm-2">Password</label>
       <div class="col-sm-10">
-          <input ngModel type="password" class="form-control" id="inputPassword" placeholder="Password" required min-length="8">
+          <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Password" ngModel required min-length="8">
       </div>
   </div>
   <div class="row container form-group" id="genderForm">
