--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: #222;
+    background-color: #333;
     color: rgb(245, 241, 242);
     box-shadow: 3px 3px 3px 3px rgba(153, 153, 153, 0.767);
 }
@@ -7,27 +7,31 @@ nav {
 .nav-pic {
     width: 60px;
     height: 60px;
-    margin: 0 10px 0 0;
 }
 
 .nav-item {
     padding: 0 10px;
-    border-bottom: 2px solid #fd0236;
 }
 
-.nav-item:hover {
-    transform: translateY(3px);
-    border: 2px solid #fd0236;
+.nav-item:hover,
+.active {
+    border-bottom: 1px solid #fd0236;
 }
 
 .li-style {
     color: #fff;
 }
 
-/* @media (max-width: 470px) {
+@media (max-width: 570px) {
+
+    .nav-pic {
+        float: left;
+    }
+
     .nav-pic,
     .list {
         display: block;
         margin: 0 auto;
     }
-} */
+
+}
